@@ -42,6 +42,7 @@ public:
 private:
 	void setup_sensitivity ();
 	void make_clicked ();
+	bool confirm_overwrite (boost::filesystem::path path);
 
 	boost::weak_ptr<const Film> _film;
 	ScreensPanel* _screens;
